
* Created a "sounds.properties" file which allows you to specify which era of sounds (ww2, preindustrial, classical, future) you are using, and also set up custom sound choices for each sound location path. (veqryn)

* Getting TripleA Map Panel to center on the capital of a player, whenever we switch to a new player's phase. (veqryn)

* Abstracting the Stats panels into AbstractStatPanel so that extending Stats panel (and all of its overhead) is no longer necessary for the EconomyPanel, ObjectivePanel, TerritoryDetailPanel, and other panels. (veqryn)

* Changing Tech Stats Panel to use small flag images for column headers instead of the first letter of nation names. (veqryn)

* Fixing bugs with placing constructions in sea zones. Now constructions can only be "produced" by the territory they are going into. (veqryn)

* Adding a lot more sounds to the engine (zim xero) and some sounds specific to napoleonic empires. (hepster & veqryn)

* Added tutorial on how to make a map and/or map skin. (veqryn)

* Allowing for Sea Factories, and Air Factories, to produce from owned sea zones. (veqryn)

* Added UPnP support to TripleA, so that TripleA will now attempt to Forward Ports for the user.  This means users should no longer have to do port forwarding themselves to be able to host a game online. (veqryn)

* Created framework for using UPnP library, and UI component for user. (veqryn)

* Added java library for Universal Plug and Play (UPnP) to TripleA. (veqryn)

* Created new HotKey, "N", which when pressed during a movement phase, will cycle through all units with available movement left, focusing the map on the unit. (veqryn)

* Created new HotKey, "I", which when pressed will create a popup for 5 seconds showing all the info about the unit and/or territory your mouse is currently over. (veqryn)

* Allowing the map to be scrolled by using the arrow keys and/or WASD. (veqryn)
